# minima

./: .env.sample  .gitignore  .gitmodules  README.md  docker-compose-chatgpt.yml  docker-compose-mcp-sse.yml  docker-compose-mcp.yml  docker-compose-ollama.yml  docker-compose.yml  minima-sse.sh  nginx_config.conf  run.sh  run_in_copilot.sh  run_mcp.sh  run_mcp_sse.sh  start-sse.sh  stop-sse.sh  stop_mcp_sse.sh
chat/: Dockerfile  package-lock.json  package.json
chat/src/: App.js  ChatApp.tsx
firebase/: .firebaserc  action_config_rag.yaml  package-lock.json
firebase/functions/: .eslintrc.js  actions.js  index.js  package-lock.json
indexer/: Dockerfile  app.py  async_loop.py  indexer.py  init_models.py  requirements.txt  storage.py
linker/: Dockerfile  app.py  requirements.txt
llm/: Dockerfile  app.py  async_answer_to_socket.py  async_question_to_answer.py  async_queue.py  async_socket_to_chat.py  llm_chain.py
mcp-server/: README.md  pyproject.toml
mcp-server-sse/: Dockerfile  pyproject.toml  sse_client.html  test_sse.py
mcp-server-sse/src/minima/: requestor.py  server.py
mcp-server/src/minima/: server.py
sse/: Dockerfile  app.py  client_example.html  client_example.py  requirements.txt
